[gd_scene load_steps=14 format=3 uid="uid://p05w3hef1agr"]

[ext_resource type="Script" path="res://scripts/GameTick.gd" id="1_oug6a"]
[ext_resource type="PackedScene" uid="uid://b0kel821blc0r" path="res://scenes/preloader.tscn" id="1_sqkn0"]
[ext_resource type="Texture2D" uid="uid://bfnxicvsb744n" path="res://assets/textures/atlases/atlas_1750216403.197.png" id="2_ruedx"]
[ext_resource type="Texture2D" uid="uid://biqjtm3lyqh23" path="res://assets/textures/selectionOutline.png" id="2_snjxe"]
[ext_resource type="Script" path="res://scripts/MouseTracker.gd" id="3_gugnt"]
[ext_resource type="Script" path="res://scripts/dungeonGeneration.gd" id="4_jaot8"]
[ext_resource type="Script" path="res://scripts/pathFinder.gd" id="7_53fc2"]
[ext_resource type="Script" path="res://scripts/FogOfWar.gd" id="8_e0plt"]

[sub_resource type="GDScript" id="GDScript_ib2rh"]
script/source = "extends Node2D
@onready var generator := $DungeonGenerator
@onready var tileMap := $\"Level 1\"

# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	var vp = get_viewport()
	vp.snap_2d_transforms_to_pixel = true
	var pos : Vector2 = generator.get_random_open_cell()
	var player = load(\"res://scenes/player.tscn\").instantiate()
	player.position = pos
	add_child(player)
	
	for i in range(1):
		pos = generator.get_random_open_cell()
		var enemy = load(\"res://scenes/enemy.tscn\").instantiate()
		enemy.position = pos
		add_child(enemy)
"

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_vib2a"]
texture = ExtResource("2_ruedx")
texture_region_size = Vector2i(128, 128)
use_texture_padding = false
0:0/0 = 0
0:0/0/texture_origin = Vector2i(0, 32)
0:0/0/y_sort_origin = 16
0:0/0/custom_data_0 = true
1:0/0 = 0
1:0/0/texture_origin = Vector2i(0, 32)
1:0/0/y_sort_origin = -128
4:0/0 = 0
4:0/0/texture_origin = Vector2i(0, 32)
4:0/0/y_sort_origin = -16
4:0/0/custom_data_0 = true
5:0/0 = 0
5:0/0/texture_origin = Vector2i(0, 32)
5:0/0/y_sort_origin = -16
5:0/0/custom_data_0 = true
6:0/0 = 0
6:0/0/texture_origin = Vector2i(0, 32)
6:0/0/y_sort_origin = -16
7:0/0 = 0
7:0/0/texture_origin = Vector2i(0, 32)
7:0/0/y_sort_origin = -16
0:1/0 = 0
0:1/0/texture_origin = Vector2i(0, 32)
0:1/0/y_sort_origin = -16
1:1/0 = 0
1:1/0/texture_origin = Vector2i(0, 32)
1:1/0/y_sort_origin = -16
2:1/0 = 0
2:1/0/texture_origin = Vector2i(0, 32)
2:1/0/y_sort_origin = -16
3:1/0 = 0
3:1/0/texture_origin = Vector2i(0, 32)
3:1/0/y_sort_origin = -16
4:1/0 = 0
4:1/0/texture_origin = Vector2i(0, 32)
4:1/0/y_sort_origin = -16
5:1/0 = 0
5:1/0/texture_origin = Vector2i(0, 32)
5:1/0/y_sort_origin = -16
6:1/0 = 0
6:1/0/texture_origin = Vector2i(0, 32)
6:1/0/y_sort_origin = -16
7:1/0 = 0
7:1/0/texture_origin = Vector2i(0, 32)
7:1/0/y_sort_origin = -16
0:2/0 = 0
0:2/0/texture_origin = Vector2i(0, 32)
0:2/0/y_sort_origin = -16
1:2/0 = 0
1:2/0/texture_origin = Vector2i(0, 32)
1:2/0/y_sort_origin = -16
2:2/0 = 0
2:2/0/texture_origin = Vector2i(0, 32)
2:2/0/y_sort_origin = -16
3:2/0 = 0
3:2/0/texture_origin = Vector2i(0, 32)
3:2/0/y_sort_origin = -16
4:2/0 = 0
4:2/0/texture_origin = Vector2i(0, 32)
4:2/0/y_sort_origin = -16
5:2/0 = 0
5:2/0/texture_origin = Vector2i(0, 32)
5:2/0/y_sort_origin = -16
6:2/0 = 0
6:2/0/texture_origin = Vector2i(0, 32)
6:2/0/y_sort_origin = -16
7:2/0 = 0
7:2/0/texture_origin = Vector2i(0, 32)
7:2/0/y_sort_origin = -16
0:3/0 = 0
0:3/0/texture_origin = Vector2i(0, 32)
0:3/0/y_sort_origin = -16
1:3/0 = 0
1:3/0/texture_origin = Vector2i(0, 32)
1:3/0/y_sort_origin = -16
2:3/0 = 0
2:3/0/texture_origin = Vector2i(0, 32)
2:3/0/y_sort_origin = -16
3:3/0 = 0
3:3/0/texture_origin = Vector2i(0, 32)
3:3/0/y_sort_origin = -16
4:3/0 = 0
4:3/0/texture_origin = Vector2i(0, 32)
4:3/0/y_sort_origin = -16
5:3/0 = 0
5:3/0/texture_origin = Vector2i(0, 32)
5:3/0/y_sort_origin = -16
6:3/0 = 0
6:3/0/texture_origin = Vector2i(0, 32)
6:3/0/y_sort_origin = -16
7:3/0 = 0
7:3/0/texture_origin = Vector2i(0, 32)
7:3/0/y_sort_origin = -16
0:4/0 = 0
0:4/0/texture_origin = Vector2i(0, 32)
0:4/0/y_sort_origin = -16
1:4/0 = 0
1:4/0/texture_origin = Vector2i(0, 32)
1:4/0/y_sort_origin = -16
2:4/0 = 0
2:4/0/texture_origin = Vector2i(0, 32)
2:4/0/y_sort_origin = -16
3:4/0 = 0
3:4/0/texture_origin = Vector2i(0, 32)
3:4/0/y_sort_origin = -16
4:4/0 = 0
4:4/0/texture_origin = Vector2i(0, 32)
4:4/0/y_sort_origin = -16
5:4/0 = 0
5:4/0/texture_origin = Vector2i(0, 32)
5:4/0/y_sort_origin = -16
6:4/0 = 0
6:4/0/texture_origin = Vector2i(0, 32)
6:4/0/y_sort_origin = -16
7:4/0 = 0
7:4/0/texture_origin = Vector2i(0, 32)
7:4/0/y_sort_origin = -16
0:5/0 = 0
0:5/0/texture_origin = Vector2i(0, 32)
0:5/0/y_sort_origin = -16
1:5/0 = 0
1:5/0/texture_origin = Vector2i(0, 32)
1:5/0/y_sort_origin = -16
2:5/0 = 0
2:5/0/texture_origin = Vector2i(0, 32)
2:5/0/y_sort_origin = -16
3:5/0 = 0
3:5/0/texture_origin = Vector2i(0, 32)
3:5/0/y_sort_origin = -16
4:5/0 = 0
4:5/0/texture_origin = Vector2i(0, 32)
4:5/0/y_sort_origin = -16
5:5/0 = 0
5:5/0/texture_origin = Vector2i(0, 32)
5:5/0/y_sort_origin = -16
6:5/0 = 0
6:5/0/texture_origin = Vector2i(0, 32)
6:5/0/y_sort_origin = -16
7:5/0 = 0
7:5/0/texture_origin = Vector2i(0, 32)
7:5/0/y_sort_origin = -16
0:6/0 = 0
0:6/0/texture_origin = Vector2i(0, 32)
0:6/0/y_sort_origin = -16
1:6/0 = 0
1:6/0/texture_origin = Vector2i(0, 32)
1:6/0/y_sort_origin = -16
2:6/0 = 0
2:6/0/texture_origin = Vector2i(0, 32)
2:6/0/y_sort_origin = -16
3:6/0 = 0
3:6/0/texture_origin = Vector2i(0, 32)
3:6/0/y_sort_origin = -16
4:6/0 = 0
4:6/0/texture_origin = Vector2i(0, 32)
4:6/0/y_sort_origin = -16
5:6/0 = 0
5:6/0/texture_origin = Vector2i(0, 32)
5:6/0/y_sort_origin = -16
6:6/0 = 0
6:6/0/texture_origin = Vector2i(0, 32)
6:6/0/y_sort_origin = -16
7:6/0 = 0
7:6/0/texture_origin = Vector2i(0, 32)
7:6/0/y_sort_origin = -16
0:7/0 = 0
0:7/0/texture_origin = Vector2i(0, 32)
0:7/0/y_sort_origin = -16
1:7/0 = 0
1:7/0/texture_origin = Vector2i(0, 32)
1:7/0/y_sort_origin = -16
2:7/0 = 0
2:7/0/texture_origin = Vector2i(0, 32)
2:7/0/y_sort_origin = -16
3:7/0 = 0
3:7/0/texture_origin = Vector2i(0, 32)
3:7/0/y_sort_origin = -16
4:7/0 = 0
4:7/0/texture_origin = Vector2i(0, 32)
4:7/0/y_sort_origin = -16
5:7/0 = 0
5:7/0/texture_origin = Vector2i(0, 32)
5:7/0/y_sort_origin = -16
6:7/0 = 0
6:7/0/texture_origin = Vector2i(0, 32)
6:7/0/y_sort_origin = -16
7:7/0 = 0
7:7/0/texture_origin = Vector2i(0, 32)
7:7/0/y_sort_origin = -16
2:0/0 = 0
2:0/0/texture_origin = Vector2i(0, 32)
2:0/0/y_sort_origin = -128
3:0/0 = 0
3:0/0/texture_origin = Vector2i(0, 32)
3:0/0/y_sort_origin = -128

[sub_resource type="TileSet" id="TileSet_7imj7"]
tile_shape = 1
tile_layout = 4
tile_size = Vector2i(111, 62)
occlusion_layer_0/light_mask = 1
occlusion_layer_0/sdf_collision = true
custom_data_layer_0/name = "PathBlock"
custom_data_layer_0/type = 1
sources/0 = SubResource("TileSetAtlasSource_vib2a")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_d412i"]
texture = ExtResource("2_snjxe")
texture_region_size = Vector2i(128, 128)
0:0/next_alternative_id = 3
0:0/0 = 0
0:0/0/texture_origin = Vector2i(0, 32)
0:0/1 = 1
0:0/1/texture_origin = Vector2i(0, 32)
0:0/1/modulate = Color(0, 1, 0, 1)
0:0/2 = 2
0:0/2/texture_origin = Vector2i(32, 0)
0:0/2/modulate = Color(1, 1, 0, 1)

[sub_resource type="TileSet" id="TileSet_7cmud"]
tile_shape = 1
tile_layout = 4
tile_size = Vector2i(111, 62)
sources/0 = SubResource("TileSetAtlasSource_d412i")

[node name="World" type="CanvasModulate"]
y_sort_enabled = true
texture_filter = 6
script = SubResource("GDScript_ib2rh")

[node name="GameTick" type="Node" parent="."]
script = ExtResource("1_oug6a")

[node name="Level 1" type="TileMapLayer" parent="."]
y_sort_enabled = true
tile_set = SubResource("TileSet_7imj7")
script = ExtResource("8_e0plt")
dungeonGenerator = NodePath("../DungeonGenerator")

[node name="MouseTracker" type="TileMapLayer" parent="."]
z_index = 1
tile_set = SubResource("TileSet_7cmud")
script = ExtResource("3_gugnt")

[node name="DungeonGenerator" type="Node" parent="."]
script = ExtResource("4_jaot8")
width = 51
height = 51
level1 = NodePath("../Level 1")

[node name="PathFinder" type="Node2D" parent="."]
script = ExtResource("7_53fc2")
dungeonGenerator = NodePath("../DungeonGenerator")
mouseTracker = NodePath("../MouseTracker")
floorTiles = NodePath("../Level 1")

[node name="Preloader" parent="." instance=ExtResource("1_sqkn0")]
z_index = 4096

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
z_index = 1
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="CanvasLayer/Control"]
visibility_layer = 2
layout_mode = 1
offset_right = 91.0
offset_bottom = 23.0
text = "HIgdfgdfgdf"

[node name="Label2" type="Label" parent="CanvasLayer/Control"]
visibility_layer = 2
layout_mode = 1
offset_top = 25.0
offset_right = 91.0
offset_bottom = 48.0
text = "HIgdfgdfgdf"

[node name="Label3" type="Label" parent="CanvasLayer/Control"]
visibility_layer = 2
layout_mode = 1
offset_top = 47.0
offset_right = 91.0
offset_bottom = 70.0
text = "HIgdfgdfgdf"
